Se agregó un ejempo de vmArgs al README